Develop hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="hero-navbar">
+        <div class="dbg hero-navbar">
             <div class="navbar-logo">
                 <a>Header Logo</a>
             </div>
@@ -19,9 +19,20 @@
                 <a href="https://www.instagram.com/_justin.chiang_/" target="_blank">Contact</a>
             </div>
         </div>
-        <div class="hero-container">
-            
+        <div class="dbg hero">
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>
+                    This website has some subtext that  goes here under the main title.
+                    It's a smaller font and the color is lower contrast.
+                </p>
+                <button type="button">Sign Up</button>
+            </div>
+            <div class="img">
+                <img src="shib.webp">
+            </div>
         </div>
+        
     </div>
 </body>
 </html>
