--- a/index.html
+++ b/index.html
@@ -32,7 +32,43 @@
                 <img src="shib.webp">
             </div>
         </div>
-        
+        <div class="info">
+            <div class="header">
+                <h1>Some random information.</h1>
+            </div>
+            <div class="content">
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote-container">
+            <div class="box">
+                <div class="quote">
+                    <p><i>This is an inspiring quote, or a testimonial from a customer.
+                        Maybe it's just filled up space, or maybe people will actually read it.
+                        Who knows? All I knkow iss that it looks nice.</i>
+                    </p>
+                </div>
+                <div class="author">
+                    <p>-Thor, God of Thunder</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
